2003-01-29  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/diarenderer.c (draw_line_with_arrows)
	(draw_polyline_with_arrows, draw_arc_with_arrows)
	(draw_bezier_with_arrows): Fixed linestyle change bug (#104488)
	without changing renderer API.  Thanks to David Scherba for
	providing inspiration.

2003-01-28  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/interface.c (create_display_shell):
	* app/display.h: Patching from Hubert Figuiere
	<hfiguiere@teaser.fr>:  Better types for menu bar widgets, and
	correct menu items.

2003-01-26  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/defaults.c (defaults_show): Fixed defaults closing bug.
	Thanks to Hans for pointing it out.

2003-01-25  Hans Breuer  <hans@breuer.org>

	* app/commands.c : don't warn about crashing libart renderer
	on win32. It simply doesn't render text anymore :-(

	* app/filedlg.c : use GtkMessageDialog for 'file overwrite'

	* objects/UML/class.c : don't access umlclass->properties_dialog
	after calling gtk_widget_destroy(umlclass->properties_dialog->dialog)
	which sets the former to NULL by destroy_properties_dialog() callback.

	* plug-ins/wmf/wmf.cpp : use dia_image_rowstride()

	* plug-ins/python/pydia-font.c : fix PyDiaFont_GetAttr()

	* plug-ins/python/pydia-image.c : add image.uri member
	not only useful for SVG rendering

	* plug-ins/python/diasvg.py : (new file) a more advanced
	example. A full blown SVG Renderer, currently only
	registered for .svgz

	* plug-ins/python/export-object.py : write text props

	* plug-ins/python/debug_objects.py : write prop.type and
	prop.visible 

2003-01-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/UML/association.c (association_update_data): Better
	bounding box for assoc with arrows.

	* lib/properties.h: New flag for properties with multiple values
	in groups.

	* app/lineprops_area.c (dia_arrow_chooser_dialog_show): Correct
	arrow updating in dialog.  Was broken due to changes from destroy
	fix:(
