@@ -23,6 +23,7 @@
 #include "widgets.h"
 #include "message.h"
 #include "dia_dirs.h"
+#include "arrows.h"
 
 #include <stdlib.h>
 #include <glib.h>
@@ -33,30 +34,6 @@
 #include <time.h>
 
 #include "diagtkfontsel.h"
-
-struct menudesc {
-  char *name;
-  int enum_value;
-};
-
-static void fill_menu(GtkMenu *menu, GSList **group, 
-                      const struct menudesc *menudesc)
-{
-  GtkWidget *menuitem;
-  const struct menudesc *md = menudesc;
-
-  while (md->name) {
-    menuitem = gtk_radio_menu_item_new_with_label (*group, md->name);
-    gtk_object_set_user_data(
-        GTK_OBJECT(menuitem), 
-        GINT_TO_POINTER(((struct menudesc*)md)->enum_value));
-    *group = gtk_radio_menu_item_group (GTK_RADIO_MENU_ITEM (menuitem));
-    gtk_menu_shell_append (GTK_MENU_SHELL(menu), menuitem);
-    gtk_widget_show (menuitem);
-
-    md++;
-  }
-}
 
 /************* DiaFontSelector: ***************/
 
@@ -1011,31 +988,25 @@ arrow_type_change_callback(GtkObject *as, gboolean arg1, gpointer data)
   set_size_sensitivity(DIAARROWSELECTOR(as));
 }
 
-static struct menudesc arrow_types[] =
-{{N_("None"),ARROW_NONE},
- {N_("Lines"),ARROW_LINES},
- {N_("Hollow Triangle"),ARROW_HOLLOW_TRIANGLE},
- {N_("Filled Triangle"),ARROW_FILLED_TRIANGLE},
- {N_("Unfilled Triangle"),ARROW_UNFILLED_TRIANGLE},
- {N_("Filled Diamond"),ARROW_FILLED_DIAMOND},
- {N_("Half Head"),ARROW_HALF_HEAD},
- {N_("Slashed Cross"),ARROW_SLASHED_CROSS},
- {N_("Filled Ellipse"),ARROW_FILLED_ELLIPSE},
- {N_("Hollow Ellipse"),ARROW_HOLLOW_ELLIPSE},
- {N_("Filled Dot"),ARROW_FILLED_DOT},
- {N_("Dimension Origin"),ARROW_DIMENSION_ORIGIN},
- {N_("Blanked Dot"),ARROW_BLANKED_DOT},
- {N_("Double Hollow triangle"),ARROW_DOUBLE_HOLLOW_TRIANGLE},
- {N_("Double Filled triangle"),ARROW_DOUBLE_FILLED_TRIANGLE},
- {N_("Filled Box"),ARROW_FILLED_BOX},
- {N_("Blanked Box"),ARROW_BLANKED_BOX},
- {N_("Slashed"),ARROW_SLASH_ARROW},
- {N_("Integral Symbol"),ARROW_INTEGRAL_SYMBOL},
- {N_("Crow Foot"),ARROW_CROW_FOOT},
- {N_("Cross"),ARROW_CROSS},
- {N_("Filled Concave"),ARROW_FILLED_CONCAVE},
- {N_("Blanked Concave"),ARROW_BLANKED_CONCAVE},
- {NULL,0}};
+/* This is actually quite general, but only used here */
+static void dia_arrow_fill_menu(GtkMenu *menu, GSList **group, 
+                      const struct menudesc *menudesc)
+{
+  GtkWidget *menuitem;
+  const struct menudesc *md = menudesc;
+
+  while (md->name) {
+    menuitem = gtk_radio_menu_item_new_with_label (*group, md->name);
+    gtk_object_set_user_data(
+			     GTK_OBJECT(menuitem), 
+			     GINT_TO_POINTER(((struct menudesc*)md)->enum_value));
+    *group = gtk_radio_menu_item_group (GTK_RADIO_MENU_ITEM (menuitem));
+    gtk_menu_shell_append (GTK_MENU_SHELL(menu), menuitem);
+    gtk_widget_show (menuitem);
+
+    md++;
+  }
+}
 
 
 static void
@@ -1059,7 +1030,7 @@ dia_arrow_selector_init (DiaArrowSelector *as)
   submenu = NULL;
   group = NULL;
 
-  fill_menu(GTK_MENU(menu),&group,arrow_types);
+  dia_arrow_fill_menu(GTK_MENU(menu),&group,arrow_types);
 
   gtk_menu_set_active(GTK_MENU (menu), DEFAULT_ARROW);
   gtk_option_menu_set_menu (GTK_OPTION_MENU (omenu), menu);
